# frappe-docker

./: .gitignore  .gitmodules  README.md  do.sh  pyproject.toml
apps/: erpnext-v16.22.0  erpnext-v16.22.0.json  wiki-v3.0.0-rc.4  wiki-v3.0.0-rc.4.env  wiki-v3.0.0-rc.4.json
compose/: compose.images.yml  compose.mariadb.healthcheck.yml  compose.noproxy.traefik.yml  compose.traefik.yml  docker.images.yml
scripts/: base.sh  flori.sh
src/flori_cli/: __init__.py  cli.py
