[project]
name = "flori-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hans Neville", email = "hans@swianle.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
]

[project.scripts]
fi = "flori_cli.cli:cli"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
